@@ -4,14 +4,17 @@ import ch.qos.logback.classic.Logger;
 import com.google.common.collect.Lists;
 import io.github.gms.abstraction.AbstractLoggingUnitTest;
 import io.github.gms.common.enums.RotationPeriod;
+import io.github.gms.common.enums.SystemProperty;
 import io.github.gms.functions.secret.SecretEntity;
 import io.github.gms.functions.secret.SecretRepository;
 import io.github.gms.functions.secret.SecretRotationService;
+import io.github.gms.functions.systemproperty.SystemPropertyService;
 import io.github.gms.util.TestUtils;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.ArgumentCaptor;
 import org.slf4j.LoggerFactory;
+import org.springframework.core.env.Environment;
 
 import java.time.Clock;
 import java.time.Instant;
@@ -35,6 +38,9 @@ import static org.mockito.Mockito.when;
  */
 class SecretRotationJobTest extends AbstractLoggingUnitTest {
 
+	private Clock clock;
+	private Environment env;
+	private SystemPropertyService systemPropertyService;
 	private SecretRepository secretRepository;
 	private SecretRotationService service;
 	private SecretRotationJob job;
@@ -43,13 +49,28 @@ class SecretRotationJobTest extends AbstractLoggingUnitTest {
 	@BeforeEach
 	public void setup() {
 		super.setup();
-		Clock clock = mock(Clock.class);
+		clock = mock(Clock.class);
+		env = mock(Environment.class);
+		systemPropertyService = mock(SystemPropertyService.class);
 		secretRepository = mock(SecretRepository.class);
 		service = mock(SecretRotationService.class);
-		job = new SecretRotationJob(clock, secretRepository, service);
+		job = new SecretRotationJob(env, systemPropertyService, clock, secretRepository, service);
 		((Logger) LoggerFactory.getLogger(SecretRotationJob.class)).addAppender(logAppender);
-		when(clock.instant()).thenReturn(Instant.parse("2023-06-29T00:00:00Z"));
-		when(clock.getZone()).thenReturn(ZoneOffset.UTC);
+	}
+
+	@Test
+	void execute_whenSkipJobExecutionReturnsTrue_thenSkipExecution() {
+		// arrange
+		when(env.getProperty("HOSTNAME")).thenReturn("ab123457");
+		when(systemPropertyService.get(SystemProperty.SECRET_ROTATION_RUNNER_CONTAINER_ID)).thenReturn("ab123456");
+
+		// act
+		job.execute();
+
+		// assert
+		assertTrue(logAppender.list.isEmpty());
+		verify(systemPropertyService, times(2)).get(SystemProperty.SECRET_ROTATION_RUNNER_CONTAINER_ID);
+		verify(service, never()).rotateSecret(any(SecretEntity.class));
 	}
 
 	@Test
@@ -58,6 +79,8 @@ class SecretRotationJobTest extends AbstractLoggingUnitTest {
 		Clock mockClock = Clock.fixed(Instant.parse("2023-06-29T00:00:00Z"), ZoneId.systemDefault());
 		when(secretRepository.findAllOldRotated(any(ZonedDateTime.class)))
 			.thenReturn(Lists.newArrayList(TestUtils.createSecretEntity(RotationPeriod.MONTHLY, ZonedDateTime.now(mockClock).minusDays(10L))));
+		when(clock.instant()).thenReturn(Instant.parse("2023-06-29T00:00:00Z"));
+		when(clock.getZone()).thenReturn(ZoneOffset.UTC);
 
 		// act
 		job.execute();
@@ -77,6 +100,8 @@ class SecretRotationJobTest extends AbstractLoggingUnitTest {
 					TestUtils.createSecretEntity(RotationPeriod.HOURLY, ZonedDateTime.now(mockClock).minusDays(10L)), 
 					TestUtils.createSecretEntity(RotationPeriod.MONTHLY, ZonedDateTime.now(mockClock).minusDays(10L))
 			));
+		when(clock.instant()).thenReturn(Instant.parse("2023-06-29T00:00:00Z"));
+		when(clock.getZone()).thenReturn(ZoneOffset.UTC);
 
 		// act
 		job.execute();
@@ -85,7 +110,7 @@ class SecretRotationJobTest extends AbstractLoggingUnitTest {
 		verify(service, times(1)).rotateSecret(any(SecretEntity.class));
 		verify(secretRepository).findAllOldRotated(any(ZonedDateTime.class));
 		assertFalse(logAppender.list.isEmpty());
-		assertEquals("1 entities updated", logAppender.list.get(0).getFormattedMessage());
+		assertEquals("1 entities updated", logAppender.list.getFirst().getFormattedMessage());
 
 		ArgumentCaptor<ZonedDateTime> dateCArgumentCaptor = ArgumentCaptor.forClass(ZonedDateTime.class);
 		verify(secretRepository).findAllOldRotated(dateCArgumentCaptor.capture());
